--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal#
+
+remote_theme: "mmistakes/minimal-mistakes"
 title: Welcome to the João Félix’s homepage!
 description: Feel free to bookmark this to keep an eye on my project updates
